--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <link rel="stylesheet" href="css/blogDexStyle.css">
       <link rel="stylesheet" href="css/seasonal.css">
       <link rel='icon' href="img/favicon-32x32.png">
-      <meta name="description" content="Play free unblocked games anytime and anywhere! Enjoy a wide selection of fun, exciting, and safe games for school or work">
+      <meta name="description" content="Best games in a free website">
    </head>
    <body>
       <div id="particles-js"></div>
@@ -23,10 +23,10 @@
                   <li class="selectedButton"><i class="fa-solid fa-house" ></i> Home</li>
                </a>
                <a href="pages/report.html">
-                  <li><i class="fa-solid fa-bug"></i> Bug Report</li>
+                  <li><i class="fa-solid fa-bug"></i>Bugs</li>
                </a>
                <a href="pages/request.html">
-                  <li><i class="fa-solid fa-ghost"></i> Game Request</li>
+                  <li><i class="fa-solid fa-ghost"></i>request</li>
                </a>
                <a href="pages/settings.html">
                   <li><i class="fa-solid fa-gear"></i> Settings</li>
