--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
          <header>
             <h1>
                <div class="title">
-                  Jet Yeh's Unblocked Games
+                  blackout games
                </div>
             </h1>
             <div class=right-col>
@@ -94,6 +94,14 @@
                   <a class="blogLink" href="/games/winter-falling/">
                      <div class="content">
                         <img loading="lazy" src="img/winter-falling.png" alt="Winter Falling" style="width:100%">
+                        <h4>Winter Falling</h4>
+                     </div>
+                  </a>
+               </div>
+               <div name="Super Smash flash 2" class="column gameDiv all new flash multi">
+                  <a class="blogLink" href="/games/flash/super-smash-flash-2/">
+                     <div class="content">
+                        <img loading="lazy" src="img/winter-falling.png" alt="Super Smash Flash" style="width:100%">
                         <h4>Winter Falling</h4>
                      </div>
                   </a>
