--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                <div name="Super Smash flash 2" class="column gameDiv all new flash multi">
                   <a class="blogLink" href="/games/flash/super-smash-flash-2/">
                      <div class="content">
-                        <img loading="lazy" src="img/winter-falling.png" alt="Super Smash Flash" style="width:100%">
+                        <img loading="lazy" src="img/winter-falling.png" alt="Super Smash Flash 2" style="width:100%">
                         <h4>Winter Falling</h4>
                      </div>
                   </a>
