--- a/index.html
+++ b/index.html
@@ -99,10 +99,10 @@
                   </a>
                </div>
                <div name="Super Smash flash 2" class="column gameDiv all new flash multi">
-                  <a class="blogLink" href="/games/flash/super-smash-flash-2/">
+                  <a class="blogLink" href="/games/flash/super-smash-flash-2.swf/">
                      <div class="content">
                         <img loading="lazy" src="img/winter-falling.png" alt="Super Smash Flash 2" style="width:100%">
-                        <h4>Winter Falling</h4>
+                        <h4>Super smash flash 2</h4>
                      </div>
                   </a>
                </div>
